--- a/style/portfoilio.css
+++ b/style/portfoilio.css
@@ -83,3 +83,40 @@ font-weight: 600;
 .banner-content{
     max-width: 580px;
 }
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+
+.secondary-background-color{
+    background-color: #fff8f3;
+}
+
+.about{
+    border-radius: 10px;
+    text-align: center;
+    padding: 130px 136px;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+    ;
+}
+
+.item-description{
+    font-weight: 600;
+}
