--- a/style/portfoilio.css
+++ b/style/portfoilio.css
@@ -18,6 +18,7 @@ nav{
    margin: 0px 200px;
 }
 
+
 /* font-style */
 .nav-title{
     font-weight: 800;
@@ -117,6 +118,25 @@ main{
     ;
 }
 
+main section{
+margin-top: 130px;
+margin-bottom: 130px;
+}
+
 .item-description{
     font-weight: 600;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.skill-container{
+    display: flex;
+    gap: 34px;
+}
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
