--- a/style/portfoilio.css
+++ b/style/portfoilio.css
@@ -140,3 +140,22 @@ margin-bottom: 130px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
+
+.resume-container{
+display: flex;
+gap: 24px;
+
+}
+.ex-subtitle{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.ex-description , .ex-subtitle{
+    color: #757575;
+}
+.resume hr{
+    margin: 30px 5px;
+
+}
+experience-title
