--- a/style/portfoilio.css
+++ b/style/portfoilio.css
@@ -154,8 +154,30 @@ gap: 24px;
 .ex-description , .ex-subtitle{
     color: #757575;
 }
-.resume hr{
+/* .resume hr{
     margin: 30px 5px;
 
+} */
+
+.resume-download-cv{
+    margin-top: 50px;
 }
-experience-title
+
+.resume-colume-title{
+    color: rgb(71, 71, 71);
+font-family: Open Sans;
+font-size: 30px;
+font-weight: 700;
+line-height: 41px;
+letter-spacing: 0%;
+text-align: left;
+}
+.experience-title{
+    color: rgb(71, 71, 71);
+font-family: Open Sans;
+font-size: 25px;
+font-weight: 700;
+line-height: 34px;
+letter-spacing: 0%;
+text-align: left;
+}
