--- a/style/portfoilio.css
+++ b/style/portfoilio.css
@@ -181,3 +181,26 @@ line-height: 34px;
 letter-spacing: 0%;
 text-align: left;
 }
+
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-colume{
+    width: 50%;
+}
+
+
+footer input[type="text"], footer input[type="email"], footer textarea
+{
+    height: 64px;
+    border-radius: 5px;
+    background-color: beige;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+}
